--- a/views/visit.erb
+++ b/views/visit.erb
@@ -26,7 +26,7 @@
 
   <div class="form-group">
     <label>Выбор мастера:</label>
-    <select id="aaa" class="form-control" name="master">    
+    <select class="form-control" name="master">    
     <option selected >Выберите мастера</option>    
     <option>Walter White</option>
     <option>Jessie Pinkman</option>
@@ -39,7 +39,7 @@
 <div class="col-xs-3">
   <div class="form-group">
     <label>Дата записи</label>
-    <input value="<%=@date_visit%>" name="date_" type="date" class="form-control bbb" placeholder="Введите дату записи">
+    <input value="<%=@date_visit%>" name="date_" type="date" class="form-control" placeholder="Введите дату записи">
   </div>
   <p><%=@date_error%></p>
   </div>
@@ -47,7 +47,7 @@
 <div class="col-xs-3">
    <div class="form-group">
     <label>Время записи</label>
-    <input value="<%=@time_visit%>" name="time_" type="time" class="form-control bbb" placeholder="Введите время записи">
+    <input value="<%=@time_visit%>" name="time_" type="time" class="form-control" placeholder="Введите время записи">
   </div>
   <p><%=@time_error%></p>
   </div>
@@ -56,8 +56,3 @@
   <button type="submit" class="btn btn-primary">Записаться</button>
 
 </form>
-
-<script type="text/javascript">
-  $('#aaa').css('background-color','grey');
-  $('.bbb').css('background-color','yellow');
-</script>
