--- a/views/visit.erb
+++ b/views/visit.erb
@@ -36,23 +36,49 @@
   <p><%=@master_error%></p>
 
 <div class="row">
-<div class="col-xs-3">
-  <div class="form-group">
-    <label>Дата записи</label>
-    <input value="<%=@date_visit%>" name="date_" type="date" class="form-control" placeholder="Введите дату записи">
-  </div>
-  <p><%=@date_error%></p>
+  <div class="col-xs-3">
+    <div class="form-group">
+      <label>Дата записи</label>
+      <input value="<%=@date_visit%>" name="date_" type="date" class="form-control" placeholder="Введите дату записи">
+    </div>
+    <p><%=@date_error%></p>
+    </div>
+
+  <div class="col-xs-3">
+     <div class="form-group">
+      <label>Время записи</label>
+      <input value="<%=@time_visit%>" name="time_" type="time" class="form-control" placeholder="Введите время записи">
+    </div>
+    <p><%=@time_error%></p>
   </div>
 
-<div class="col-xs-3">
-   <div class="form-group">
-    <label>Время записи</label>
-    <input value="<%=@time_visit%>" name="time_" type="time" class="form-control" placeholder="Введите время записи">
+  <div class="col-xs-5">
+     <div class="form-group">
+      <label>Выберите цвет, в который вы хотите окраситься</label>
+      <select id="color" name="color">
+        <option value="#7bd148">Green</option>
+        <option value="#5484ed">Bold blue</option>
+        <option value="#a4bdfc">Blue</option>
+        <option value="#46d6db">Turquoise</option>
+        <option value="#7ae7bf">Light green</option>
+        <option value="#51b749">Bold green</option>
+        <option value="#fbd75b">Yellow</option>
+        <option value="#ffb878">Orange</option>
+        <option value="#ff887c">Red</option>
+        <option value="#dc2127">Bold red</option>
+        <option value="#dbadff">Purple</option>
+        <option value="#e1e1e1">Gray</option>
+      </select>
+    </div>
   </div>
-  <p><%=@time_error%></p>
-  </div>
- </div>
+</div>
 
   <button type="submit" class="btn btn-primary">Записаться</button>
 
 </form>
+
+<script type="text/javascript">
+ $(function(){
+  $('#color').simplecolorpicker();
+ })
+ </script>
